[Fuchsia] fix fdio_transfer_fd() result handling in base::LaunchProcess

fdio_transfer_fd() was returning number of returned handles, while
LaunchProcess() was expecting 0 on success. Also added a unittest.

Bug: 826018
Change-Id: Iebc4457449036cc9bfe4eb2203363edde98d75af
Reviewed-on: https://chromium-review.googlesource.com/1045558
Commit-Queue: Sergey Ulanov <sergeyu@chromium.org>
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Reviewed-by: Scott Graham <scottmg@chromium.org>
Reviewed-by: Wez <wez@chromium.org>
Cr-Commit-Position: refs/heads/master@{#556610}
Former-commit-id: 7e0542fb25c67ea1f0a6b1a4ab135e298bf0b76d